--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CortexLuma AI</title>
+    <title>CortexLuma AI by Vamshi V</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,44 +11,127 @@
     <style>
         body {
             font-family: 'Inter', sans-serif;
+            background: radial-gradient(circle at 20% 20%, #0f172a, #020617);
+            overflow: hidden;
         }
-        /* Simple scrollbar styling */
+
+        /* Floating glowing background particles */
+        body::before {
+            content: "";
+            position: absolute;
+            top: 0; left: 0;
+            width: 100%; height: 100%;
+            background: radial-gradient(circle, rgba(79,70,229,0.15) 0%, transparent 60%);
+            animation: pulseBg 8s infinite alternate ease-in-out;
+            pointer-events: none;
+            z-index: 0;
+        }
+
+        @keyframes pulseBg {
+            0% { opacity: 0.5; transform: scale(1); }
+            100% { opacity: 0.8; transform: scale(1.1); }
+        }
+
+        /* Scrollbar styling */
         ::-webkit-scrollbar {
             width: 8px;
         }
         ::-webkit-scrollbar-track {
-            background: #1e293b; /* slate-800 */
+            background: #1e293b;
         }
         ::-webkit-scrollbar-thumb {
-            background: #475569; /* slate-600 */
+            background: #475569;
             border-radius: 4px;
         }
         ::-webkit-scrollbar-thumb:hover {
-            background: #64748b; /* slate-500 */
+            background: #64748b;
+        }
+
+        /* Smooth fade-in for chat bubbles */
+        @keyframes fadeInUp {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        .chat-bubble {
+            animation: fadeInUp 0.4s ease-out forwards;
+        }
+
+        /* Glowing neon border effect for chat box */
+        .chat-glow {
+            box-shadow: 0 0 20px rgba(99,102,241,0.3), inset 0 0 10px rgba(99,102,241,0.2);
+            border: 1px solid rgba(99,102,241,0.3);
+            transition: box-shadow 0.3s ease-in-out;
+        }
+        .chat-glow:hover {
+            box-shadow: 0 0 25px rgba(99,102,241,0.5), inset 0 0 10px rgba(99,102,241,0.3);
+        }
+
+        /* Typing dots animation */
+        .typing {
+            display: inline-block;
+        }
+        .typing span {
+            display: inline-block;
+            width: 6px;
+            height: 6px;
+            margin: 0 2px;
+            background: #a5b4fc;
+            border-radius: 50%;
+            animation: blink 1.4s infinite both;
+        }
+        .typing span:nth-child(2) { animation-delay: 0.2s; }
+        .typing span:nth-child(3) { animation-delay: 0.4s; }
+        @keyframes blink {
+            0%, 80%, 100% { opacity: 0; transform: translateY(0); }
+            40% { opacity: 1; transform: translateY(-3px); }
+        }
+
+        /* Button pulse on hover */
+        #send-button:hover {
+            box-shadow: 0 0 10px rgba(99,102,241,0.7);
+            transform: scale(1.1);
+        }
+        #send-button:active {
+            transform: scale(0.95);
+        }
+
+        /* Input glow on focus */
+        #chat-input:focus {
+            box-shadow: 0 0 10px rgba(99,102,241,0.5);
+        }
+
+        /* Smooth entry for page */
+        .fade-page {
+            animation: fadePage 0.8s ease-in-out;
+        }
+        @keyframes fadePage {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
         }
     </style>
 </head>
-<body class="bg-slate-900 text-slate-200 flex items-center justify-center min-h-screen">
+<body class="text-slate-200 flex items-center justify-center min-h-screen fade-page">
 
-    <div class="max-w-2xl w-full mx-auto p-4">
+    <div class="max-w-2xl w-full mx-auto p-4 relative z-10">
         <header class="text-center mb-6">
-            <h1 class="text-3xl font-bold text-indigo-400">CortexLuma AI Chat</h1>
-            <p class="text-slate-400 mt-1">Ask me anything!</p>
+            <h1 class="text-4xl font-bold text-indigo-400 drop-shadow-lg animate-pulse">CortexLuma AI Chat</h1>
+            <p class="text-slate-400 mt-2">Ask me anything ✨</p>
         </header>
 
-        <div id="chat-messages" class="bg-slate-800 p-4 rounded-lg shadow-2xl h-[70vh] overflow-y-auto mb-4 flex flex-col space-y-4">
+        <div id="chat-messages" class="bg-slate-800/70 p-4 rounded-2xl shadow-2xl h-[70vh] overflow-y-auto mb-4 flex flex-col space-y-4 chat-glow backdrop-blur-sm">
             <div class="flex justify-start">
-                <div class="bg-indigo-600 p-3 rounded-xl rounded-tl-none max-w-xs md:max-w-lg text-sm shadow-md">
-                    Hello! I'm CortexLuma, a Gemini-powered AI. How can I help you today?
+                <div class="bg-indigo-600 p-3 rounded-xl rounded-tl-none max-w-xs md:max-w-lg text-sm shadow-md chat-bubble">
+                    Hello! I'm CortexLuma . How can I help you today?
                 </div>
             </div>
-            </div>
+        </div>
 
         <form id="chat-form" class="flex flex-col space-y-2">
             <div class="relative">
                 <textarea 
                     id="chat-input" 
-                    class="w-full p-3 pr-12 bg-slate-700 text-slate-200 border border-slate-600 rounded-lg resize-none focus:outline-none focus:ring-2 focus:ring-indigo-500 transition duration-150 overflow-hidden" 
+                    class="w-full p-3 pr-12 bg-slate-700/70 text-slate-200 border border-slate-600 rounded-lg resize-none focus:outline-none focus:ring-2 focus:ring-indigo-500 transition duration-150 overflow-hidden backdrop-blur-sm" 
                     rows="1" 
                     placeholder="Type your message..."
                     aria-label="Chat input"
