--- a/index.html
+++ b/index.html
@@ -1,159 +1,190 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CortexLuma AI by Vamshi V</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-            background: radial-gradient(circle at 20% 20%, #0f172a, #020617);
-            overflow: hidden;
-        }
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>CortexLuma AI</title>
+<script src="https://cdn.tailwindcss.com"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+<style>
+body {
+  font-family: 'Inter', sans-serif;
+  background: radial-gradient(circle at 20% 30%, #1e293b, #020617);
+  overflow: hidden;
+  position: relative;
+  color: #e2e8f0;
+}
 
-        /* Floating glowing background particles */
-        body::before {
-            content: "";
-            position: absolute;
-            top: 0; left: 0;
-            width: 100%; height: 100%;
-            background: radial-gradient(circle, rgba(79,70,229,0.15) 0%, transparent 60%);
-            animation: pulseBg 8s infinite alternate ease-in-out;
-            pointer-events: none;
-            z-index: 0;
-        }
+/* Floating particle animation */
+@keyframes floatParticle {
+  0% { transform: translateY(0) translateX(0); opacity: 0.4; }
+  50% { transform: translateY(-20px) translateX(10px); opacity: 0.8; }
+  100% { transform: translateY(0) translateX(0); opacity: 0.4; }
+}
+.particle {
+  position: absolute;
+  background: rgba(99,102,241,0.2);
+  border-radius: 50%;
+  width: 6px; height: 6px;
+  animation: floatParticle 6s infinite ease-in-out;
+}
+.particle:nth-child(1){ top:20%; left:30%; animation-delay:0s;}
+.particle:nth-child(2){ top:50%; left:70%; animation-delay:2s;}
+.particle:nth-child(3){ top:70%; left:40%; animation-delay:4s;}
+.particle:nth-child(4){ top:30%; left:80%; animation-delay:1s;}
+.particle:nth-child(5){ top:60%; left:15%; animation-delay:3s;}
 
-        @keyframes pulseBg {
-            0% { opacity: 0.5; transform: scale(1); }
-            100% { opacity: 0.8; transform: scale(1.1); }
-        }
+/* Scrollbar */
+::-webkit-scrollbar{width:8px;}
+::-webkit-scrollbar-thumb{background:#475569;border-radius:6px;}
+::-webkit-scrollbar-thumb:hover{background:#6366f1;}
 
-        /* Scrollbar styling */
-        ::-webkit-scrollbar {
-            width: 8px;
-        }
-        ::-webkit-scrollbar-track {
-            background: #1e293b;
-        }
-        ::-webkit-scrollbar-thumb {
-            background: #475569;
-            border-radius: 4px;
-        }
-        ::-webkit-scrollbar-thumb:hover {
-            background: #64748b;
-        }
+/* Chat bubble fade */
+@keyframes fadeUp {from{opacity:0;transform:translateY(10px);}to{opacity:1;transform:translateY(0);}}
+.chat-bubble{animation:fadeUp 0.3s ease-out;}
 
-        /* Smooth fade-in for chat bubbles */
-        @keyframes fadeInUp {
-            from { opacity: 0; transform: translateY(10px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
+/* Typing dots */
+.typing span {
+  display:inline-block;width:6px;height:6px;margin:0 2px;
+  background-color:#a5b4fc;border-radius:50%;
+  animation:blink 1.4s infinite both;
+}
+.typing span:nth-child(2){animation-delay:0.2s;}
+.typing span:nth-child(3){animation-delay:0.4s;}
+@keyframes blink{0%,80%,100%{opacity:0.2;transform:translateY(0);}40%{opacity:1;transform:translateY(-3px);}}
 
-        .chat-bubble {
-            animation: fadeInUp 0.4s ease-out forwards;
-        }
+/* Header glow */
+.header-glow {
+  text-shadow:0 0 10px rgba(99,102,241,0.6),0 0 20px rgba(99,102,241,0.3);
+  animation:pulseHeader 4s infinite ease-in-out;
+}
+@keyframes pulseHeader{0%{opacity:1;}50%{opacity:0.8;}100%{opacity:1;}}
 
-        /* Glowing neon border effect for chat box */
-        .chat-glow {
-            box-shadow: 0 0 20px rgba(99,102,241,0.3), inset 0 0 10px rgba(99,102,241,0.2);
-            border: 1px solid rgba(99,102,241,0.3);
-            transition: box-shadow 0.3s ease-in-out;
-        }
-        .chat-glow:hover {
-            box-shadow: 0 0 25px rgba(99,102,241,0.5), inset 0 0 10px rgba(99,102,241,0.3);
-        }
+/* Chat box style */
+.chat-box {
+  background:rgba(15,23,42,0.75);
+  backdrop-filter:blur(12px);
+  border:1px solid rgba(99,102,241,0.15);
+  border-radius:1.25rem;
+  box-shadow:0 0 30px rgba(99,102,241,0.1);
+  transition:box-shadow 0.3s ease;
+}
+.chat-box:hover {
+  box-shadow:0 0 40px rgba(99,102,241,0.2);
+}
 
-        /* Typing dots animation */
-        .typing {
-            display: inline-block;
-        }
-        .typing span {
-            display: inline-block;
-            width: 6px;
-            height: 6px;
-            margin: 0 2px;
-            background: #a5b4fc;
-            border-radius: 50%;
-            animation: blink 1.4s infinite both;
-        }
-        .typing span:nth-child(2) { animation-delay: 0.2s; }
-        .typing span:nth-child(3) { animation-delay: 0.4s; }
-        @keyframes blink {
-            0%, 80%, 100% { opacity: 0; transform: translateY(0); }
-            40% { opacity: 1; transform: translateY(-3px); }
-        }
+/* Input focus */
+#chat-input:focus {
+  border-color:#6366f1;
+  box-shadow:0 0 12px rgba(99,102,241,0.4);
+}
 
-        /* Button pulse on hover */
-        #send-button:hover {
-            box-shadow: 0 0 10px rgba(99,102,241,0.7);
-            transform: scale(1.1);
-        }
-        #send-button:active {
-            transform: scale(0.95);
-        }
+/* Send button hover */
+#send-button:hover{
+  transform:scale(1.1);
+  box-shadow:0 0 10px rgba(99,102,241,0.6);
+}
+#send-button:active{transform:scale(0.95);}
 
-        /* Input glow on focus */
-        #chat-input:focus {
-            box-shadow: 0 0 10px rgba(99,102,241,0.5);
-        }
+/* AI bubble gradient */
+.ai-bubble {
+  background:linear-gradient(135deg,#475569 0%,#334155 100%);
+}
+.user-bubble {
+  background:linear-gradient(135deg,#6366f1 0%,#4f46e5 100%);
+}
 
-        /* Smooth entry for page */
-        .fade-page {
-            animation: fadePage 0.8s ease-in-out;
-        }
-        @keyframes fadePage {
-            from { opacity: 0; transform: translateY(10px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-    </style>
+/* Page fade-in */
+.fade-page {animation:fadePage 0.6s ease-in-out;}
+@keyframes fadePage{from{opacity:0;transform:translateY(20px);}to{opacity:1;transform:translateY(0);}}
+</style>
 </head>
-<body class="text-slate-200 flex items-center justify-center min-h-screen fade-page">
 
-    <div class="max-w-2xl w-full mx-auto p-4 relative z-10">
-        <header class="text-center mb-6">
-            <h1 class="text-4xl font-bold text-indigo-400 drop-shadow-lg animate-pulse">CortexLuma AI Chat</h1>
-            <p class="text-slate-400 mt-2">Ask me anything ✨</p>
-        </header>
+<body class="fade-page">
+<!-- Floating particles -->
+<div class="particle"></div>
+<div class="particle"></div>
+<div class="particle"></div>
+<div class="particle"></div>
+<div class="particle"></div>
 
-        <div id="chat-messages" class="bg-slate-800/70 p-4 rounded-2xl shadow-2xl h-[70vh] overflow-y-auto mb-4 flex flex-col space-y-4 chat-glow backdrop-blur-sm">
-            <div class="flex justify-start">
-                <div class="bg-indigo-600 p-3 rounded-xl rounded-tl-none max-w-xs md:max-w-lg text-sm shadow-md chat-bubble">
-                    Hello! I'm CortexLuma . How can I help you today?
-                </div>
-            </div>
-        </div>
+<div class="max-w-2xl w-full mx-auto p-4 relative z-10">
+  <header class="text-center mb-4">
+    <h1 class="text-4xl font-bold text-indigo-400 header-glow">CortexLuma AI</h1>
+    <p class="text-slate-400 mt-1">ChatGPT Jr — Sleek • Smart • Fast ⚡</p>
+  </header>
 
-        <form id="chat-form" class="flex flex-col space-y-2">
-            <div class="relative">
-                <textarea 
-                    id="chat-input" 
-                    class="w-full p-3 pr-12 bg-slate-700/70 text-slate-200 border border-slate-600 rounded-lg resize-none focus:outline-none focus:ring-2 focus:ring-indigo-500 transition duration-150 overflow-hidden backdrop-blur-sm" 
-                    rows="1" 
-                    placeholder="Type your message..."
-                    aria-label="Chat input"
-                    style="min-height: 44px; max-height: 200px;"
-                ></textarea>
-                <button 
-                    type="submit" 
-                    id="send-button"
-                    class="absolute right-2 bottom-2 bg-indigo-600 hover:bg-indigo-700 text-white p-2 rounded-full transition duration-150 disabled:opacity-50"
-                    aria-label="Send message"
-                >
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="w-5 h-5">
-                        <path d="M3.105 2.548A2.25 2.25 0 0 0 .5 4.675v9.5c0 1.054.912 1.908 1.996 1.908h.084l.875 1.167a.75.75 0 0 0 1.173.044l.897-.978 10.63-7.589c.866-.62.866-1.927 0-2.547L6.53 1.359a.75.75 0 0 0-1.173.044l-.897.978-.084.108Z" />
-                        <path d="M10.873 9.75V7.5a.75.75 0 0 0-1.5 0v2.25H6.75a.75.75 0 0 0 0 1.5h2.623v2.25a.75.75 0 0 0 1.5 0v-2.25h2.623a.75.75 0 0 0 0-1.5h-2.623Z" />
-                    </svg>
-                </button>
-            </div>
-            <div id="error-message" class="text-red-400 text-sm h-4"></div>
-        </form>
+  <div id="chat-messages" class="chat-box p-4 h-[70vh] overflow-y-auto mb-4 flex flex-col space-y-4">
+    <div class="flex justify-start">
+      <div class="ai-bubble p-3 rounded-xl max-w-xs md:max-w-lg text-sm shadow chat-bubble">
+        👋 Hi, I'm <span class="text-indigo-300 font-semibold">CortexLuma</span> — your personal ChatGPT Jr! What shall we explore today?
+      </div>
     </div>
+  </div>
+
+  <form id="chat-form" class="flex flex-col space-y-2">
+    <div class="relative flex items-center">
+      <textarea
+        id="chat-input"
+        class="flex-1 p-3 pr-12 bg-slate-800 border border-slate-700 rounded-lg text-slate-200 resize-none focus:outline-none focus:ring-2 focus:ring-indigo-500 transition duration-150 overflow-hidden"
+        rows="1"
+        placeholder="Type your message..."
+        style="min-height:44px;max-height:200px;"
+      ></textarea>
+      <button
+        type="submit"
+        id="send-button"
+        class="absolute right-3 bottom-2 bg-indigo-600 hover:bg-indigo-700 text-white p-2 rounded-full transition"
+      >
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
+          <path d="M3.105 2.548A2.25 2.25 0 0 0 .5 4.675v9.5c0 1.054.912 1.908 1.996 1.908h.084l.875 1.167a.75.75 0 0 0 1.173.044l.897-.978 10.63-7.589c.866-.62.866-1.927 0-2.547L6.53 1.359a.75.75 0 0 0-1.173.044l-.897.978-.084.108Z" />
+          <path d="M10.873 9.75V7.5a.75.75 0 0 0-1.5 0v2.25H6.75a.75.75 0 0 0 0 1.5h2.623v2.25a.75.75 0 0 0 1.5 0v-2.25h2.623a.75.75 0 0 0 0-1.5h-2.623Z" />
+        </svg>
+      </button>
+    </div>
+    <div id="error-message" class="text-red-400 text-sm h-4"></div>
+  </form>
+</div>
 
     <script>
+        
+input.addEventListener('input',()=>{
+  input.style.height='auto';
+  input.style.height=Math.min(input.scrollHeight,200)+'px';
+});
+
+form.addEventListener('submit',async(e)=>{
+  e.preventDefault();
+  const text=input.value.trim();
+  if(!text)return;
+  addMessage(text,'user');
+  input.value='';
+  input.style.height='44px';
+  // typing
+  const typing=document.createElement('div');
+  typing.className='flex justify-start';
+  typing.innerHTML=`<div class="ai-bubble p-3 rounded-xl max-w-xs md:max-w-lg text-sm chat-bubble typing"><span></span><span></span><span></span></div>`;
+  messages.appendChild(typing);
+  messages.scrollTop=messages.scrollHeight;
+  setTimeout(()=>{
+    typing.remove();
+    addMessage("✨ Interesting point! Let's unpack that together.",'ai');
+  },1600);
+});
+
+function addMessage(text,sender){
+  const wrap=document.createElement('div');
+  wrap.className=sender==='user'?'flex justify-end':'flex justify-start';
+  const bubble=document.createElement('div');
+  bubble.className=(sender==='user'?'user-bubble':'ai-bubble')+' p-3 rounded-xl max-w-xs md:max-w-lg text-sm shadow chat-bubble';
+  bubble.textContent=text;
+  wrap.appendChild(bubble);
+  messages.appendChild(wrap);
+  messages.scrollTop=messages.scrollHeight;
+}
+     
         const chatForm = document.getElementById('chat-form');
         const chatInput = document.getElementById('chat-input');
         const chatMessages = document.getElementById('chat-messages');
