--- a/index.html
+++ b/index.html
@@ -246,6 +246,8 @@
 </div>
 
 <script>
+ 
+        const BACKEND_URL = 'https://cortexluma-backend.onrender.com';
         // --- CONSTANTS AND VARIABLES ---
         const chatForm = document.getElementById('chat-form');
         const chatInput = document.getElementById('chat-input');
