--- a/cortexluma.html
+++ b/cortexluma.html
@@ -274,10 +274,10 @@
 
         // --- CONFIGURATION CONSTANTS ---
         const TEXT_STREAM_URL = "https://cortexluma-backend.onrender.com/api/stream-chat"; 
-        const MAX_IMAGES = 4; // FEATURE 5
+        const MAX_IMAGES = 10; // FEATURE 5
         const MAX_FILE_SIZE = 4 * 1024 * 1024; // 4MB limit
         const MAX_PROMPT_LENGTH = 10000;
-        const ALLOWED_MIME_TYPES = ['image/jpeg', 'image/png', 'image/webp']; 
+        const ALLOWED_MIME_TYPES = ['image/jpeg', 'image/png', 'image/webp', 'file/pdf', 'file/html', 'file/js']; 
 
         // --- STATE VARIABLES ---
         let isLoading = false;
