--- a/cortexluma.html
+++ b/cortexluma.html
@@ -277,7 +277,9 @@
         const MAX_IMAGES = 10; // FEATURE 5
         const MAX_FILE_SIZE = 4 * 1024 * 1024; // 4MB limit
         const MAX_PROMPT_LENGTH = 10000;
-        const ALLOWED_MIME_TYPES = 'image/jpeg','image/png','image/webp'];
+        // --- THIS IS THE FIX ---
+        // The original line had a syntax error (extra ' and missing [ )
+        const ALLOWED_MIME_TYPES = ['image/jpeg','image/png','image/webp'];
 
         // --- STATE VARIABLES ---
         let isLoading = false;
