--- a/cortexluma.html
+++ b/cortexluma.html
@@ -269,7 +269,8 @@
 
 
         // --- CONFIGURATION CONSTANTS ---
-        const TEXT_STREAM_URL = "https://cortexluma-backend.vercel.app/"; // MODIFIED FOR VERCEL
+        // 🚨 FIX APPLIED HERE: POINTING TO VERCEL BACKEND API 🚨
+        const TEXT_STREAM_URL = "https://cortexluma-backend.vercel.app/api/stream-chat"; 
         const MAX_IMAGES = 10; // FEATURE 5
         const MAX_FILE_SIZE = 4 * 1024 * 1024; // 4MB limit
         const MAX_PROMPT_LENGTH = 10000;
@@ -961,6 +962,10 @@
     if (recognition && recognizing) recognition.stop();
   });
 })();
+
+  </script>
+</body>
+</html>
 
   </script>
 </body>
