--- a/cortexluma.html
+++ b/cortexluma.html
@@ -966,6 +966,15 @@
     if (recognition && recognizing) recognition.stop();
   });
 })();
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-78X0E3XW9C"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-78X0E3XW9C');
+</script>
 
   </script>
 </body>
