--- a/cortexluma.html
+++ b/cortexluma.html
@@ -273,7 +273,7 @@
 
 
         // --- CONFIGURATION CONSTANTS ---
-        const TEXT_STREAM_URL = "https://cortexluma-backend.onrender.com/api/stream-chat"; 
+        const TEXT_STREAM_URL = "https://cortexluma-backend.vercel.app/"; 
         const MAX_IMAGES = 10; // FEATURE 5
         const MAX_FILE_SIZE = 4 * 1024 * 1024; // 4MB limit
         const MAX_PROMPT_LENGTH = 10000;
