--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
         // --- CONFIGURATION ---
         
         // **!!! CRITICAL: TARGET REDIRECT URL !!!**
-        const REDIRECT_URL = 'https://oryndel.github.io/cortexluma/cortexluma'; 
+        const REDIRECT_URL = 'https://cortexluma.in/dashborad'; 
 
         const FIREBASE_CONFIG = {
             apiKey: "AIzaSyBhUXJqjFiygvNx60CA4R8HrfZ2ghV8GCA",
